Refactor usage of MCPUriVariables